# CMakeList.txt : CMake project for adam-mcknight-week5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("adam-mcknight-week5")

# Add source to this project's executable.
add_executable (adam-mcknight-week5 "adam-mcknight-week5.cpp" "adam-mcknight-week5.h")

