# CMakeList.txt : CMake project for mcknight-adam-week4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight-adam-week4")

# Add source to this project's executable.
add_executable (mcknight-adam-week4 "mcknight-adam-week4.cpp" "mcknight-adam-week4.h")

# TODO: Add tests and install targets if needed.
