# CMakeList.txt : CMake project for mcknight-adam-week6, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight-adam-week6")

# Add source to this project's executable.
add_executable (mcknight-adam-week6 "mcknight-adam-week6.cpp" "mcknight-adam-week6.h")

# TODO: Add tests and install targets if needed.
