# CMakeList.txt : CMake project for mcknight-adam-week7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight-adam-week7")

# Add source to this project's executable.
add_executable (mcknight-adam-week7 "mcknight-adam-week7.cpp" "mcknight-adam-week7.h")

# TODO: Add tests and install targets if needed.
