# CMakeList.txt : CMake project for mcknight_adam_final, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight_adam_final")

# Add source to this project's executable.
add_executable (mcknight_adam_final "mcknight_adam_final.cpp" "mcknight_adam_final.h" "Lights.h" "Light.cpp")

# TODO: Add tests and install targets if needed.
