# CMakeList.txt : CMake project for mcknight_adam_midterm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight_adam_midterm")

# Add source to this project's executable.
add_executable (mcknight_adam_midterm "mcknight_adam_midterm.cpp" "mcknight_adam_midterm.h")

# TODO: Add tests and install targets if needed.
