# CMakeList.txt : CMake project for mcknight_adam_week10, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight_adam_week10")

# Add source to this project's executable.
add_executable (mcknight_adam_week10 "mcknight_adam_week10.cpp" "mcknight_adam_week10.h")

# TODO: Add tests and install targets if needed.
