# CMakeList.txt : CMake project for mcknight_adam_week8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mcknight_adam_week8")

# Add source to this project's executable.
add_executable (mcknight_adam_week8 "mcknight_adam_week8.cpp" "mcknight_adam_week8.h")

# TODO: Add tests and install targets if needed.
